--- a/test/expected/mixin.hbs
+++ b/test/expected/mixin.hbs
@@ -1,5 +1,5 @@
-<!-- TODO: Fix unsupported jade mixin -->
+<!-- TODO: Fix unsupported pug mixin -->
 mixin hello(world)
-<h1>WORLD</h1><!-- TODO: Fix unsupported jade mixin -->
+<h1>WORLD</h1><!-- TODO: Fix unsupported pug mixin -->
 mixin foo(bar, bas, bat)
 <h2>BAR</h2><p>BAS</p><p>BAT</p>
