--- a/test/expected/unsupported.hbs
+++ b/test/expected/unsupported.hbs
@@ -1,6 +1,6 @@
-<!-- TODO: Fix unsupported jade include -->
-include ./includes/beep.jade
-<!-- TODO: Fix unsupported jade extends -->
+<!-- TODO: Fix unsupported pug include -->
+include ./includes/beep.pug
+<!-- TODO: Fix unsupported pug extends -->
 extends layout
-<script><!-- TODO: Fix unsupported jade inline javascript -->
+<script><!-- TODO: Fix unsupported pug inline javascript -->
 var foo = !{input.toUpperCase()};</script>
